# LCSF_Generator

./: .gitignore  CMakeLists.txt  LCSF_Generator.pro  LCSF_Generator_CLI.pro  README.md  _config.yml  cross_testing.sh  index.md  update_vernb.sh
.circleci/: config.yml
Src/: LCSF_Generator.pro  attribute.cpp  attribute.h  codeextractor.cpp  codeextractor.h  codegenerator.cpp  codegenerator.h  command.cpp  command.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
example/: Example.json  Test.json  file_transfer.json
include/: attribute.h  codeextractor.h  codegenerator.h  command.h  deschandler.h  docgenerator.h  enumtype.h  rustextractor.h  rustgenerator.h
src/: CLI_main.cpp  CMakeLists.txt  LCSF_Generator.pro  attribute.cpp  attribute.h  codeextractor.cpp  codegenerator.cpp  codegenerator.h  command.cpp  command.h  deschandler.cpp  deschandler.h  docgenerator.cpp  enumtype.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rustextractor.cpp  rustgenerator.cpp  version.h.in
test/C_Output/: project.yml
test/C_Output/desc/: Test.json
tests/: CMakeLists.txt  test_attribute.cpp  test_codegenerator.cpp  test_command.cpp  test_data.cpp  test_data.h  test_deschandler.cpp  test_docgenerator.cpp  test_extractor.cpp  test_generator.cpp  test_rustgenerator.cpp
tests/data/: extractor_data.h  generator_data.h  model_bridge.c  model_bridge.h  model_bridge_a.c  model_bridge_a.rs  model_bridge_b.c  model_bridge_b.rs  model_desc.c  model_desc.h  model_desc.json  model_dokuwiki.txt  model_extractor.c  model_main.c  model_main.h  model_main_a.c  model_main_a.rs  model_main_b.c  model_main_b.rs  model_mkdown.md  model_raw_main.c  model_raw_main.h  model_raw_main_a.c  model_raw_main_b.c  model_wiki.txt  output_extractor.h
